# CMakeList.txt : CMake project for Snake-Game, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Snake-Game")

# Add source to this project's executable.
add_executable (Snake-Game "Snake-Game.cpp" "Snake-Game.h")

# TODO: Add tests and install targets if needed.
